# PythonSetup

./: .coverage  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  coverage.xml  pyproject.toml  tox.ini
.github/workflows/: validate.yml
src/: main.py
src/core/: main.py  main_test.py
test/: main_test.py
test/core/: __init__.py  main.py  main_test.py
