[tool.poetry]
name = "python-setup"
version = "0.1.0"
description = "A personal boilerplate setup for Python projects."
authors = ["Dikuriku <dikuriku.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"
tox = "^4.5.1"
coverage = "^7.2.4"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ['.venv', '.git', '.tox']
